crates/aspen-client-api/tests/snapshots/serialization_snapshots__delete_key_request.snap
---
source: crates/aspen-client-api/tests/serialization_snapshots.rs
expression: req
---
{
  "DeleteKey": {
    "key": "my-key"
  }
}
