crates/aspen-client-api/tests/snapshots/serialization_snapshots__delete_result_response.snap
---
source: crates/aspen-client-api/tests/serialization_snapshots.rs
expression: resp
---
{
  "DeleteResult": {
    "key": "my-key",
    "was_deleted": true,
    "error": null
  }
}
