crates/aspen-client-api/tests/snapshots/serialization_snapshots__error_response.snap
---
source: crates/aspen-client-api/tests/serialization_snapshots.rs
expression: resp
---
{
  "Error": {
    "code": "NOT_LEADER",
    "message": "This node is not the current leader"
  }
}
