crates/aspen-client-api/tests/snapshots/serialization_snapshots__get_raft_metrics_request.snap
---
source: crates/aspen-client-api/tests/serialization_snapshots.rs
expression: req
---
"GetRaftMetrics"
