crates/aspen-client-api/tests/snapshots/serialization_snapshots__read_key_request.snap
---
source: crates/aspen-client-api/tests/serialization_snapshots.rs
expression: req
---
{
  "ReadKey": {
    "key": "my-key"
  }
}
