crates/aspen-client-api/tests/snapshots/serialization_snapshots__read_result_found.snap
---
source: crates/aspen-client-api/tests/serialization_snapshots.rs
expression: resp
---
{
  "ReadResult": {
    "value": [
      104,
      101,
      108,
      108,
      111,
      32,
      119,
      111,
      114,
      108,
      100
    ],
    "was_found": true,
    "error": null
  }
}
