crates/aspen-client-api/tests/snapshots/serialization_snapshots__read_result_not_found.snap
---
source: crates/aspen-client-api/tests/serialization_snapshots.rs
expression: resp
---
{
  "ReadResult": {
    "value": null,
    "was_found": false,
    "error": null
  }
}
