crates/aspen-client-api/tests/snapshots/serialization_snapshots__scan_keys_request.snap
---
source: crates/aspen-client-api/tests/serialization_snapshots.rs
expression: req
---
{
  "ScanKeys": {
    "prefix": "app:",
    "limit": 100,
    "continuation_token": null
  }
}
