crates/aspen-client-api/tests/snapshots/serialization_snapshots__write_result_response.snap
---
source: crates/aspen-client-api/tests/serialization_snapshots.rs
expression: resp
---
{
  "WriteResult": {
    "is_success": true,
    "error": null
  }
}
